# now-you-sea-me

./: .gitignore  .pre-commit-config.yaml  PROGRESS_UPDATES.md  README.md  RECOMMENDED_SOLUTION.md  planning.md  pyproject.toml
.claude/: code_standards.md  pipeline_overview.md
.github/: pull_request_template.md
.github/workflows/: linting_validation.yaml
oakd-camera-tracking/: pyproject.toml  run_pipeline.py
oakd-camera-tracking/configs/: camera_config.yaml  model_config.yaml  pipeline_config.yaml  pipline_config.yaml
oakd-camera-tracking/src/: __init__.py  pipeline.py  settings.py
oakd-camera-tracking/src/camera/: __init__.py  camera_access.py  camera_recording.py  camera_tracking.py
oakd-camera-tracking/src/depth_perception/: __init__.py  depth_zones.py  target_estimator.py
oakd-camera-tracking/src/imu/: __init__.py  imu_integrator.py
oakd-camera-tracking/src/inference/: __init__.py  object_detection.py
oakd-camera-tracking/src/utils/: __init__.py  config_utils.py
